# restaurant/src/main/java/hu/oe/yokudlela/restaurant/generated/rest/model/ApiError.java
@@ -1,0 +1,43 @@
+package hu.oe.yokudlela.restaurant.generated.rest.model;
+
+import java.net.URI;
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import org.openapitools.jackson.nullable.JsonNullable;
+import java.io.Serializable;
+import java.time.OffsetDateTime;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import org.hibernate.validator.constraints.*;
+import io.swagger.v3.oas.annotations.media.Schema;
+
+
+import java.util.*;
+import jakarta.annotation.Generated;
+
+/**
+ * ApiError
+ */
+@lombok.Data
+@lombok.NoArgsConstructor
+@lombok.AllArgsConstructor
+@lombok.Builder
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", comments = "Generator version: 7.10.0")
+public class ApiError implements Serializable {
+
+  private static final long serialVersionUID = 1L;
+
+  private String path;
+
+  private String message;
+
+  @Valid
+  private List<String> errors = new ArrayList<>();
+
+}
+
